--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ whitenoise==6.7.0
 Django==5.1
 django_crispy_forms==2.3
 django_tables2==2.7.0
-unfold==1.2.0
+django-unfold==0.39.0
+django-filter==24.3
