--- a/.example.env
+++ b/.example.env
@@ -12,3 +12,5 @@ SECRET_KEY=your_secret_key
 
 # Example for other environment variables
 ALLOWED_HOSTS=localhost,127.0.0.1
+STATICFILES_DIRS=
+STATIC_URL=
